pallets/phala/src/fat_tokenomic/snapshots/phala_pallets__fat_tokenomic__tests__can_restake_without_any_changes-2.snap
---
source: pallets/phala/src/fat_tokenomic/tests.rs
assertion_line: 99
expression: events
---
[
    Event::FatTokenomic(
        Event::ContractDepositChanged {
            contract: 0x2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a,
            deposit: 1000000000000,
        },
    ),
]
