pallets/phala/src/fat_tokenomic/snapshots/phala_pallets__fat_tokenomic__tests__can_restake_without_any_changes.snap
---
source: pallets/phala/src/fat_tokenomic/tests.rs
assertion_line: 90
expression: events
---
[
    Event::System(
        Event::NewAccount {
            account: 0101010101010101010101010101010101010101010101010101010101010101 (5C62Ck4U...),
        },
    ),
    Event::Balances(
        Event::Endowed {
            account: 0101010101010101010101010101010101010101010101010101010101010101 (5C62Ck4U...),
            free_balance: 100000000000000,
        },
    ),
    Event::Balances(
        Event::BalanceSet {
            who: 0101010101010101010101010101010101010101010101010101010101010101 (5C62Ck4U...),
            free: 100000000000000,
            reserved: 0,
        },
    ),
    Event::System(
        Event::NewAccount {
            account: 0202020202020202020202020202020202020202020202020202020202020202 (5C7LYpP2...),
        },
    ),
    Event::Balances(
        Event::Endowed {
            account: 0202020202020202020202020202020202020202020202020202020202020202 (5C7LYpP2...),
            free_balance: 100000000000000,
        },
    ),
    Event::Balances(
        Event::BalanceSet {
            who: 0202020202020202020202020202020202020202020202020202020202020202 (5C7LYpP2...),
            free: 100000000000000,
            reserved: 0,
        },
    ),
    Event::System(
        Event::NewAccount {
            account: 6d6f646c706861742f746f6b0000000000000000000000000000000000000000 (5EYCAe5i...),
        },
    ),
    Event::Balances(
        Event::Endowed {
            account: 6d6f646c706861742f746f6b0000000000000000000000000000000000000000 (5EYCAe5i...),
            free_balance: 1000000000000,
        },
    ),
    Event::Balances(
        Event::Transfer {
            from: 0101010101010101010101010101010101010101010101010101010101010101 (5C62Ck4U...),
            to: 6d6f646c706861742f746f6b0000000000000000000000000000000000000000 (5EYCAe5i...),
            amount: 1000000000000,
        },
    ),
    Event::FatTokenomic(
        Event::ContractDepositChanged {
            contract: 0x2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a,
            deposit: 1000000000000,
        },
    ),
]
